--- a/flexbox_styles.css
+++ b/flexbox_styles.css
@@ -17,29 +17,42 @@ header nav{
 /* Cards */
 .card-container{
     display: flex;
-    justify-content: center;
 }
 
 .card{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0 1.5rem;
 }
 
 /* Features  */
 .features{
     display: flex;
-    justify-content: center;
+    padding: 2.5rem 0;
 }
 
 .feature-item{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0 2rem;
+    text-align: center;
 }
 
 /* Footer */
+.footer-content{
+    display: flex;
+    justify-content: center;
+}
 
+.footer-section{
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    flex: 1;
+}
 
 /* 
 Challenge: Use flexbox in media queries to create a responsive layout 
